--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -161,12 +161,12 @@ jobs:
       - name: Setup release build
         run: |
           meson setup \
+            --wrap-mode=forcefallback \
             -Dbuildtype=release \
             -Ddefault_library=static \
             -Db_asneeded=true \
             -Db_lto=true \
             -Dtry_static_libs=opusfile,png,sdl2,sdl2_net \
-            -Duse_fluidsynth=false \
             build
 
       - name: Build
